<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:labelFor="@id/txtAction"
        android:text="@string/ui_label_settings_action"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUrl" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:labelFor="@id/txtExtra"
        android:text="@string/ui_label_settings_extra"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAction" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="100dp"
        android:labelFor="@id/txtExtra"
        android:text="@string/ui_label_settings_dark_color"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExtra" />

    <Button
        android:id="@+id/cmdUrlQrCode"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:labelFor="@id/txtUrl"
        android:text="@string/ui_button_settings_scan"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUrl"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="textUri"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmdUrlQrCode"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtAction"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:maxLines="1"
        android:inputType="text"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtExtra"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:maxLines="1"
        android:inputType="text"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/cboHa"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:text="@string/ui_label_settings_ha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExtra" />

    <Button
        android:id="@+id/cmdSave"
        style="@style/Widget.Material3.Button"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/ui_label_settings_save"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cboHa" />

    <Button
        android:id="@+id/cmdRestart"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:text="@string/ui_label_settings_restart"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmdSave" />

    <ImageButton
        android:id="@+id/imgScan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:contentDescription="@string/ui_title_scanner_activity"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/txtUrl"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qrcode" />

    <com.rtugeek.android.colorseekbar.ColorSeekBar
        android:id="@+id/colorSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>