<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@id/txtPwd"
            android:text="@string/ui_button_password"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@id/txtUser"
            android:text="@string/ui_button_user"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


        <Button
            android:id="@+id/cmdSaveToken"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:background="@color/colorAccent"
            android:text="@string/ui_button_ok"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPwd"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/cmdGotoSetting"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/ui_label_goto_setting"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cmdSaveToken" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>